# Huawei_Tasks

./: .gitignore  README.md
Onegin/: CMakeLists.txt  Onegin.out  main.cpp  sorting.cpp  sorting.h  textio.cpp  textio.h  unit_test.cpp  unit_test.h  utf_string.cpp  utf_string.h  utf_text.cpp  utf_text.h  utils.cpp  utils.h  wide_string.cpp  wide_string.h  wide_text.cpp  wide_text.h
Protected_Stack/: CMakeLists.txt  hash.cpp  hash.h  main.cpp  memory.cpp  memory.h  stack.cpp  stack.h  stk-config.h  utils.cpp  utils.h
Quadratic_Solver/: CMakeLists.txt  equations.cpp  equations.h  main.cpp  unit_tests.cpp  unit_tests.h  utils.cpp  utils.h
