cmake_minimum_required(VERSION 3.20)
project(Onegin)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS}\
        -Werror\
        -fmax-errors=1\
        -Wall\
        -Wextra\
        -Weffc++\
        -Waggressive-loop-optimizations\
        -Wc++0x-compat\
        -Wc++11-compat\
        -Wc++14-compat\
        -Wcast-align\
        -Wcast-qual\
        -Wchar-subscripts\
        -Wconditionally-supported\
        -Wconversion\
        -Wctor-dtor-privacy\
        -Wempty-body\
        -Wfloat-equal\
        -Wformat-nonliteral\
        -Wformat-security\
        -Wformat-signedness\
        -Wformat=2\
        -Winline\
        -Wlarger-than=8192\
        -Wlogical-op\
        -Wmissing-declarations\
        -Wnon-virtual-dtor\
        -Wopenmp-simd\
        -Woverloaded-virtual\
        -Wpacked\
        -Wpointer-arith\
        -Wredundant-decls\
        -Wshadow\
        -Wsign-conversion\
        -Wsign-promo\
        -Wstack-usage=8192\
        -Wstrict-null-sentinel\
        -Wstrict-overflow=2\
        -Wsuggest-attribute=noreturn\
        -Wsuggest-final-methods\
        -Wsuggest-final-types\
        -Wsuggest-override\
        -Wswitch-default\
        -Wswitch-enum\
        -Wsync-nand\
        -Wundef\
        -Wunreachable-code\
        -Wunused\
        -Wuseless-cast\
        -Wvariadic-macros\
        -Wno-literal-suffix\
        -Wno-missing-field-initializers\
        -Wno-narrowing\
        -Wno-old-style-cast\
        -Wno-varargs\
        -fcheck-new\
        -fsized-deallocation\
        -fstack-protector\
        -fstrict-overflow\
        -lm\
        -pie\
")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS}\
        -fsanitize=leak\
        -flto-odr-type-merging\
        -fno-omit-frame-pointer\
        -fPIE\
        -fsanitize=bool\
        -fsanitize=bounds\
        -fsanitize=enum\
        -fsanitize=float-cast-overflow\
        -fsanitize=float-divide-by-zero\
        -fsanitize=integer-divide-by-zero\
        -fsanitize=object-size\
        -fsanitize=return\
        -fsanitize=returns-nonnull-attribute\
        -fsanitize=shift\
        -fsanitize=signed-integer-overflow\
        -fsanitize=unreachable\
        -fsanitize=vla-bound\
        -fsanitize=vptr\
        -g\
")

add_executable(Onegin main.cpp textio.cpp textio.h sorting.cpp sorting.h utf_string.cpp utf_string.h utf_text.cpp utf_text.h)
